--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-vertical-timeline-component": "^3.5.3",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.0"
   },
   "devDependencies": {
